feat validate request
